--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19134,6 +19134,15 @@ div#featured-project-carousel {
     width: unset !important;
 }*/
 
+#News .content .title,
+#Photos .content .title,
+#Videos .content .title {
+    display: flex;
+    justify-content: right;
+    align-content: start;
+    min-height: 60px;
+}
+
 #Photos .inner .thumbnail a img,
 #Videos .inner .thumbnail a img {
     height: 260px;
@@ -19228,8 +19237,8 @@ div#featured-project-carousel {
             transition: var(--transition);
             color: var(--color-lightn);
             font-weight: 600;
-            font-size: 23px;
-            line-height: 34px;
+            font-size: 17px;
+            line-height: 30px;
             display: inline-block;
         }
 
