--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19258,6 +19258,7 @@ div#featured-project-carousel {
 .album-description {
     margin-top: 5rem;
     font-size: 1.6rem;
+    padding: 0 30px;
 }
 
 @media only screen and (max-width: 479px) {
