--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21994,15 +21994,37 @@ body.white-version {
     color: #ff014f;
 }
 
+.alert {
+    display: block;
+    position: relative;
+    padding: 0.4rem 3.5rem 0.4rem 1.25rem;
+    margin-bottom: 3rem;
+    border: 2px solid transparent;
+    border-radius: 0.5rem;
+    font-size: 1.5rem;
+    letter-spacing: .2px;
+    box-shadow: var(--shadow-1);
+    z-index: 10;
+}
+
+.alert-danger {
+    color: #ff014f;
+    background-color: #191b1e;
+    border-color: rgba(255, 1, 79, 0.4);
+}
+
+    .alert-danger:after {
+        content: "\f057";
+        font-family: "Font Awesome 5 Free";
+        font-weight: 900;
+        position: absolute;
+        right: 15px;
+    }
+
 .alert-success {
     color: #35c892;
     background-color: rgba(15, 206, 136, 0.3);
-    padding: 0.4rem 3.5rem 0.4rem 1.25rem;
     border-color: #35c58c;
-    margin-bottom: 1rem;
-    display: block;
-    font-size: var(--font-size-b3);
-    z-index: 10;
 }
 
     .alert-success:after {
@@ -22012,3 +22034,86 @@ body.white-version {
         position: absolute;
         right: 15px;
     }
+
+    /* Start Page Loader */
+.page-load > div {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 99999999;
+    background: rgba(0,0,0,0.3);
+    overflow: hidden;
+}
+
+.page-load .spinner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.page-load div span {
+    position: absolute;
+    width: 6px;
+    height: 46px;
+    margin-top: -23px;
+    border-radius: 10px;
+    background-color: #ff014f;
+    animation: animate 0.8s infinite;
+    animation-direction: alternate-reverse;
+}
+
+    .page-load div span:nth-child(1) {
+        margin-left: 105px;
+    }
+
+    .page-load div span:nth-child(2) {
+        margin-left: 75px;
+        animation-delay: 0.1s;
+    }
+
+    .page-load div span:nth-child(3) {
+        margin-left: 45px;
+        animation-delay: 0.2s;
+    }
+
+    .page-load div span:nth-child(4) {
+        margin-left: 15px;
+        animation-delay: 0.3s;
+    }
+
+    .page-load div span:nth-child(5) {
+        margin-left: -15px;
+        animation-delay: 0.4s;
+    }
+
+    .page-load div span:nth-child(6) {
+        margin-left: -45px;
+        animation-delay: 0.5s;
+    }
+
+    .page-load div span:nth-child(7) {
+        margin-left: -75px;
+        animation-delay: 0.6s;
+    }
+
+    .page-load div span:nth-child(8) {
+        margin-left: -105px;
+        animation-delay: 0.7s;
+    }
+
+@keyframes animate {
+    0% {
+        height: 5px;
+        margin-top: 0;
+        transform: rotate(20deg);
+    }
+
+    100% {
+        height: 46px;
+        transform: rotate(0deg);
+    }
+}
+    /* End Page Loader */
