--- a/CP/css/cpcustom.css
+++ b/CP/css/cpcustom.css
@@ -6859,3 +6859,7 @@ a .price-barcode:hover {
         transition: all .2s ease-in-out;
     }
 /*End tbl-imgs*/
+
+.d-flex {
+    display: flex !important;
+}
