--- a/assets/css/new-skin/new-skin.css
+++ b/assets/css/new-skin/new-skin.css
@@ -763,7 +763,7 @@ input[type="file"] {
     color: #ff014f;
     font-size: 16px;
     line-height: 20px;
-    height: 20px;
+    /*height: 20px;*/
     font-weight: 400;
 }
 
