--- a/Master.master
+++ b/Master.master
@@ -10,7 +10,7 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/logo/sh_logo.png" />
     <!-- CSS
     ============================================ -->
     <link href="assets/fontawsome-5.4.1/css/pro.min.css" rel="stylesheet" />
@@ -36,7 +36,7 @@
                     <div class="header-left">
                         <div class="logo">
                             <a href="Home.aspx">
-                                <img src="assets/images/logo/logos-circle.png" alt="logo">
+                                <img src="assets/images/logo/sh_logo.png" alt="logo" style="border-radius: 50%;">
                             </a>
                         </div>
                     </div>
@@ -52,8 +52,8 @@
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="Technical_Analysis.aspx">تحليلات الاسواق</a></li>
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="News.aspx">الأخبار</a></li>
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="Courses.aspx">الدورات التدريبية</a></li>
-                                <li class="nav-item"><a class="nav-link smoth-animation" href="Seminars.aspx">الندوات</a></li>
-                                <li class="nav-item"><a class="nav-link smoth-animation" href="Conferences.aspx">المؤتمرات</a></li>
+                               <%-- <li class="nav-item"><a class="nav-link smoth-animation" href="Seminars.aspx">الندوات</a></li>
+                                <li class="nav-item"><a class="nav-link smoth-animation" href="Conferences.aspx">المؤتمرات</a></li>--%>
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="Album_Videos.aspx">الفيديو</a></li>
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="Album_Photos.aspx">الصور</a></li>
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="About.aspx">عنى</a></li>
@@ -118,8 +118,8 @@
                         <li class="nav-item"><a class="nav-link smoth-animation" href="Technical_Analysis.aspx">تحليلات الاسواق</a></li>
                         <li class="nav-item"><a class="nav-link smoth-animation" href="News.aspx">الأخبار</a></li>
                         <li class="nav-item"><a class="nav-link smoth-animation" href="Courses.aspx">الدورات التدريبية</a></li>
-                        <li class="nav-item"><a class="nav-link smoth-animation" href="Seminars.aspx">الندوات</a></li>
-                        <li class="nav-item"><a class="nav-link smoth-animation" href="Conferences.aspx">المؤتمرات</a></li>
+                       <%-- <li class="nav-item"><a class="nav-link smoth-animation" href="Seminars.aspx">الندوات</a></li>
+                        <li class="nav-item"><a class="nav-link smoth-animation" href="Conferences.aspx">المؤتمرات</a></li>--%>
                         <li class="nav-item"><a class="nav-link smoth-animation" href="Album_Videos.aspx">الفيديو</a></li>
                         <li class="nav-item"><a class="nav-link smoth-animation" href="Album_Photos.aspx">الصور</a></li>
                         <li class="nav-item"><a class="nav-link smoth-animation" href="About.aspx">عنى</a></li>
