--- a/Master.master
+++ b/Master.master
@@ -52,7 +52,7 @@
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="Technical_Analysis.aspx">تحليلات الاسواق</a></li>
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="News.aspx">الأخبار</a></li>
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="Courses.aspx">الدورات التدريبية</a></li>
-                               <%-- <li class="nav-item"><a class="nav-link smoth-animation" href="Seminars.aspx">الندوات</a></li>
+                                <%-- <li class="nav-item"><a class="nav-link smoth-animation" href="Seminars.aspx">الندوات</a></li>
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="Conferences.aspx">المؤتمرات</a></li>--%>
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="Album_Videos.aspx">الفيديو</a></li>
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="Album_Photos.aspx">الصور</a></li>
@@ -102,14 +102,15 @@
                 <div class="menu-top">
                     <div class="menu-header">
                         <a class="logo" href="Home.aspx">
-                            <img src="assets/images/logo/logos-circle.png" alt="Personal Portfolio">
+                            <img src="assets/images/logo/logos-circle.png" alt="Personal Portfolio"/>
                         </a>
                         <div class="close-button">
                             <button class="close-menu-activation close"><i data-feather="x"></i></button>
                         </div>
                     </div>
-                    <p class="discription">
-                        لوريم ايبسوم هو نموذج افتراضي يوضع في التصاميم لتعرض على العميل.
+                    <p class="discription" id="lblMobileDescription" runat="server">
+                        <%--<asp:Label ID="lblMobileDescription" Text="" runat="server" />--%>
+                        <%--لوريم ايبسوم هو نموذج افتراضي يوضع في التصاميم لتعرض على العميل.--%>
                     </p>
                 </div>
                 <div class="content">
@@ -118,7 +119,7 @@
                         <li class="nav-item"><a class="nav-link smoth-animation" href="Technical_Analysis.aspx">تحليلات الاسواق</a></li>
                         <li class="nav-item"><a class="nav-link smoth-animation" href="News.aspx">الأخبار</a></li>
                         <li class="nav-item"><a class="nav-link smoth-animation" href="Courses.aspx">الدورات التدريبية</a></li>
-                       <%-- <li class="nav-item"><a class="nav-link smoth-animation" href="Seminars.aspx">الندوات</a></li>
+                        <%-- <li class="nav-item"><a class="nav-link smoth-animation" href="Seminars.aspx">الندوات</a></li>
                         <li class="nav-item"><a class="nav-link smoth-animation" href="Conferences.aspx">المؤتمرات</a></li>--%>
                         <li class="nav-item"><a class="nav-link smoth-animation" href="Album_Videos.aspx">الفيديو</a></li>
                         <li class="nav-item"><a class="nav-link smoth-animation" href="Album_Photos.aspx">الصور</a></li>
@@ -129,61 +130,65 @@
                     <div class="social-share-style-1 mt--40">
                         <span class="title">تواصل معى عبر</span>
                         <ul class="social-share d-flex liststyle">
-                            <li class="facebook">
-                                <a href="<%# Eval("FacebookURL").ToString  %>" target="_blank">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook">
-                                        <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="twitter">
-                                <a href="<%# Eval("TwitterURL").ToString  %>" target="_blank">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter">
-                                        <path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="instagram">
-                                <a href="<%# Eval("InstagramURL").ToString  %>" target="_blank">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram">
-                                        <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
-                                        <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
-                                        <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="linkedin">
-                                <a href="<%# Eval("LinkedInURL").ToString  %>" target="_blank">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin">
-                                        <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
-                                        <rect x="2" y="9" width="4" height="12"></rect>
-                                        <circle cx="4" cy="4" r="2"></circle>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="youtube">
-                                <a href="<%# Eval("YoutubeURL").ToString  %>" target="_blank">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-youtube">
-                                        <path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z"></path>
-                                        <polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="telegram-plane">
-                                <a href="<%# Eval("TelegramURL").ToString  %>" target="_blank">
-                                    <i class="fab fa-telegram-plane"></i>
-                                </a>
-                            </li>
-                            <li class="tiktok">
-                                <a href="<%# Eval("TikTokURL").ToString  %>" target="_blank">
-                                    <i class="fab fa-tiktok"></i>
-                                </a>
-                            </li>
-                            <li class="whatsapp">
-                                <a href="<%# "https://wa.me/2" + Eval("Mobile").ToString  %>" target="_blank">
-                                    <i class="fab fa-whatsapp"></i>
-                                </a>
-                            </li>
+                            <asp:ListView runat="server" ID="lvSocialMedia2">
+                                <ItemTemplate>
+                                    <li class="facebook">
+                                        <a href="<%# Eval("FacebookURL").ToString  %>" target="_blank">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook">
+                                                <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="twitter">
+                                        <a href="<%# Eval("TwitterURL").ToString  %>" target="_blank">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter">
+                                                <path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="instagram">
+                                        <a href="<%# Eval("InstagramURL").ToString  %>" target="_blank">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram">
+                                                <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+                                                <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+                                                <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="linkedin">
+                                        <a href="<%# Eval("LinkedInURL").ToString  %>" target="_blank">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin">
+                                                <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+                                                <rect x="2" y="9" width="4" height="12"></rect>
+                                                <circle cx="4" cy="4" r="2"></circle>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="youtube">
+                                        <a href="<%# Eval("YoutubeURL").ToString  %>" target="_blank">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-youtube">
+                                                <path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z"></path>
+                                                <polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="telegram-plane">
+                                        <a href="<%# Eval("TelegramURL").ToString  %>" target="_blank">
+                                            <i class="fab fa-telegram-plane"></i>
+                                        </a>
+                                    </li>
+                                    <li class="tiktok">
+                                        <a href="<%# Eval("TikTokURL").ToString  %>" target="_blank">
+                                            <i class="fab fa-tiktok"></i>
+                                        </a>
+                                    </li>
+                                    <li class="whatsapp">
+                                        <a href="<%# "https://wa.me/2" + Eval("Mobile").ToString  %>" target="_blank">
+                                            <i class="fab fa-whatsapp"></i>
+                                        </a>
+                                    </li>
+                                </ItemTemplate>
+                            </asp:ListView>
                         </ul>
                     </div>
                     <!-- end -->
